feat: criar endpoint get event by id
